--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ function preload() {
 	spec["epsilon"] = greedy
 	spec["gamma"] = gamma 
 	rlagent = new RL.DQNAgent(env, spec);
-	agent = new Agent((width / 2= - 50, (height / 2) + 50, rlagent, actions, '#00f')
+	agent = new Agent((width / 2) - 50, (height / 2) + 50, rlagent, actions, '#00f')
 	episodes.push([])
 }
 	
