--- a/index.html
+++ b/index.html
@@ -339,10 +339,11 @@ function draw() {
 			createApples()
 		}
 		if(!training) {	
+			textAlign(CENTER, CENTER);
 			textSize(30)
 			if(white) fill(0)
 			else fill(255)
-			text("Episode: "+episodeCounter, width - 200, 50)
+			text("Episode: "+episodeCounter, width - 250, 50)
 		}
 	}
   
