--- a/index.html
+++ b/index.html
@@ -338,13 +338,7 @@ function draw() {
 			episodes[episodeCounter] = []
 			createApples()
 		}
-		if(!training) {	
-			textAlign(CENTER, CENTER);
-			textSize(30)
-			if(white) fill(0)
-			else fill(255)
-			text("Episode: "+episodeCounter, width - 250, 50)
-		}
+		
 	}
   
 }
@@ -588,6 +582,9 @@ class Agent {
 	        else fill(255)
 		this.score += numGood - numBad
 		text("Score: "+this.score, 125, 50)
+		if(!training)
+			text("Episode: "+episodeCounter, 300, 50)
+		
 		sensors.forEach((sensor) => {
 			sensor.forEach((feat) => {
 				if(feat !== undefined) {
