--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@ class Agent {
 		this.score += numGood - numBad
 		text("Score: "+this.score, 125, 50)
 		if(!training)
-			text("Episode: "+episodeCounter, 300, 50)
+			text("Episode: "+episodeCounter+1, 350, 50)
 		
 		sensors.forEach((sensor) => {
 			sensor.forEach((feat) => {
