--- a/index.html
+++ b/index.html
@@ -582,8 +582,10 @@ class Agent {
 	        else fill(255)
 		this.score += numGood - numBad
 		text("Score: "+this.score, 125, 50)
-		if(!training)
-			text("Episode: "+episodeCounter+1, 350, 50)
+		if(!training) {
+			let val = episodeCounter + 1
+			text("Episode: "+val, 125, 100)
+		}
 		
 		sensors.forEach((sensor) => {
 			sensor.forEach((feat) => {
