--- a/index.html
+++ b/index.html
@@ -346,6 +346,7 @@ function draw() {
 			plotEpisodeSuccess(episodeCounter+1, meanEpisodeReward)
 			episodeCounter += 1
 			agent.score = 0
+			iteration = 0
 			episodes[episodeCounter] = []
 			createApples()
 		}
