--- a/index.html
+++ b/index.html
@@ -1105,8 +1105,8 @@ Discount:
 <label>Frame Rate: 
 <input type="number" id="framesize" min="1" max="100" step="1" value="30"></label>
 <label>Speed: 
-<input type="number" id="speed" min="1" max="50" step="1" value="1"></label>
-<label>Max. Action Steps:
+<input type="number" id="speed" min="1" max="50" step="1" value="1"></label><br>
+<label>Max. Actions per Episode:
 <input type="number" id="maxActionSteps" min="1" step="1" value="100"></label>
 <br><br>
 <label>Moving Apples:
