--- a/index.html
+++ b/index.html
@@ -817,7 +817,7 @@ function plotHistogram() {
 }
 
 function plotEpisodeSuccess(meanReward) {
-	Plotly.extendTraces('stats', {y: [[meanReward]]}, [0], episodeCounter+1)
+	Plotly.extendTraces('stats', {y: [[meanReward]]}, [0], episodeCounter)
 }
 
 function storeJSON() {
