--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@ class Agent {
 		this.rlagent = rlagent
 		this.performedAction = undefined
 		this.currentState = undefined
-		this.contradictingActions = {
+		/*this.contradictingActions = {
 			'moveUp': 'moveDown', 
 			'moveDown': 'moveUp', 
 			'moveLeft': 'moveRight', 
@@ -386,7 +386,7 @@ class Agent {
 			'moveLeftDown': 'moveRightUp',
 			'moveLeftUp': 'moveRightDown',
 			'moveRightDown': 'moveLeftUp'
-		}
+		}*/
 	}
 	
 	euklideanDistance(ball) {
@@ -638,17 +638,17 @@ class Agent {
 		let name = this.actions[action].name
 		this.actions[action](this)
 		this.currentState = state
-		if(this.contradictingActions[this.performedAction] !== name){
+		//if(this.contradictingActions[this.performedAction] !== name){
 			this.rlagent.learn(reward)
 			rew = reward
-		} else {
-			this.rlagent.learn(-1 + reward)
-			rew = -1 + reward
-			this.score += -1
-			textSize(fontsize)
-			if(white) fill(0)
-			else fill(255)
-			let x = this.centerX
+		//} else {
+			//this.rlagent.learn(-1 + reward)
+			//rew = -1 + reward
+			//this.score += -1
+			//textSize(fontsize)
+			//if(white) fill(0)
+			//else fill(255)
+			/*let x = this.centerX
 			let y = this.centerY
 			if(this.centerX >= width - agentWidth)
 				x = this.centerX - agentWidth
@@ -657,9 +657,9 @@ class Agent {
 			else if(this.centerY >= height - agentHeight /2 - 5)
 				y = this.centerY - agentHeight/2 - 5
 			else if(this.centerY <= agentHeight /2 + 5)
-				y = this.centerY + agentHeight/2 +5
-			text("Contradicting Action: -1", x, y)
-		}
+				y = this.centerY + agentHeight/2 +5 */
+			//text("Contradicting Action: -1", x, y)
+		//}
 		this.performedAction = this.actions[action].name
 			
 	} else {
@@ -669,10 +669,10 @@ class Agent {
 		const {reward, state} = this.checkCollisionBySensors()
 		this.currentState = state
 		
-		if(this.contradictingActions[this.performedAction] !== name){
+		//if(this.contradictingActions[this.performedAction] !== name){
 			this.rlagent.learn(reward)
 			rew = reward
-		} else {
+		/*} else {
 			this.rlagent.learn(-1+reward)
 			rew = -1 + reward
 			this.score += -1
@@ -690,7 +690,7 @@ class Agent {
 			else if(this.centerY <= agentHeight /2 + 5)
 				y = this.centerY + agentHeight/2 +5
 			text("Contradicting Action: -1", x, y)
-		}
+		}*/
 		this.performedAction = this.actions[action].name
 	
 	}  return rew
