--- a/HoloBot.html
+++ b/HoloBot.html
@@ -73,7 +73,7 @@ function draw() {
 }
 //init()
 
-const socket = new WebSocket("ws://192.168.2.109:8001/");
+const socket = new WebSocket("ws://holomatik-ai.duckdns.org:8000/");
 // Connection opened
 socket.addEventListener("open", (event) => {
 	console.log("Connection to WebsocketServer opened")
