--- a/HoloBot.html
+++ b/HoloBot.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>AutoGenHR Demo</title>
-<script src="plotly-2.32.0.min.js" charset="utf-8"></script>
+<script src="https://cdn.plot.ly/plotly-2.32.0.min.js" charset="utf-8"></script>
 <style>
     .pdf {
         width: 100%;
@@ -73,7 +73,7 @@ function draw() {
 }
 //init()
 
-const socket = new WebSocket("ws://holomatik-ai.duckdns.org:8001/");
+const socket = new WebSocket("wss://holomatik-ai.duckdns.org:8001/");
 // Connection opened
 socket.addEventListener("open", (event) => {
 	console.log("Connection to WebsocketServer opened")
