--- a/HoloBot.html
+++ b/HoloBot.html
@@ -73,7 +73,9 @@ function draw() {
 }
 //init()
 
-const socket = new WebSocket("wss://holomatik-ai.duckdns.org", null, null, null, {rejectUnauthorized: false});
+const socket = new WebSocket("wss://holomatik-ai.duckdns.org:443", {protocolVersion: 8, 
+								origin: "https://holomatik-ai.duckdns.org:443", 
+								rejectUnauthorized: false});
 // Connection opened
 socket.addEventListener("open", (event) => {
 	console.log("Connection to WebsocketServer opened")
