--- a/HoloBot.html
+++ b/HoloBot.html
@@ -73,7 +73,7 @@ function draw() {
 }
 //init()
 
-const socket = new WebSocket("wss://holomatik-ai.duckdns.org:443", null, null, null, {rejectUnauthorized: false});
+const socket = new WebSocket("wss://holomatik-ai.onrender.com);
 // Connection opened
 socket.addEventListener("open", (event) => {
 	console.log("Connection to WebsocketServer opened")
