--- a/HoloBot.html
+++ b/HoloBot.html
@@ -84,8 +84,14 @@ socket.addEventListener("message", (event) => {
 	console.log("Message from server ", event.data);
 	const msg = JSON.parse(event.data)
 	if(msg['type'] === "pdf"){
+		const linkSource = msg.src;
+  		const downloadLink = document.createElement("a");
+  		const fileName = msg.file;
+  		downloadLink.href = linkSource;
+  		downloadLink.download = fileName;
+  		downloadLink.click();
 		const embed = document.querySelector("embed");
-		embed.setAttribute("src", msg.src);
+		embed.setAttribute("src", filename);
 		console.log(msg.src)
 		const f = msg.file.substring(msg.file.lastIndexOf("/")+1)
 		console.log(f)
