--- a/HoloBot.html
+++ b/HoloBot.html
@@ -84,18 +84,11 @@ socket.addEventListener("message", (event) => {
 	console.log("Message from server ", event.data);
 	const msg = JSON.parse(event.data)
 	if(msg['type'] === "pdf"){
-		const linkSource = msg.src;
-  		const downloadLink = document.createElement("a");
   		const fileName = msg.file;
-  		downloadLink.href = linkSource;
-  		downloadLink.download = fileName;
-  		downloadLink.click();
-		const embed = document.querySelector("embed");
-		embed.setAttribute("src", fileName);
+		const embed = document.querySelector("iframe");
+		embed.setAttribute("src", msg.src);
 		console.log(msg.src)
-		const f = msg.file.substring(msg.file.lastIndexOf("/")+1)
-		console.log(f)
-		const del = {type: "delete", file: f}
+		const del = {type: "delete", file: fileName}
 		const delTxt = JSON.stringify(del)
 		socket.send(delTxt)
 	}
@@ -747,7 +740,7 @@ Number of Sensor Measurements: <input type="number" min="1" id="simulationSteps"
 </div>-->
 <h3 align="center"><u>Generated Health Report</u></h3>
 <div id="embed" align="center" style="width: 50%; height: 100%;float: right;">
-<embed class="pdf" id="healthReportPdf" src="">
+<iframe class="pdf" id="healthReportPdf" src=""></iframe>
 </div><br><br>
 <div align="center"><label for="rating"><b>Rate Quality of Health Report</b></label><br><br>
 <input type="range" id="rating" name="rating" min="0" max="5" step="1" value="0" list="values">
