--- a/HoloBot.html
+++ b/HoloBot.html
@@ -35,44 +35,6 @@ input[type="range"] {
 }
 </style>
 <script>
-const holobot = new Image();
-
-function init() {
-  holobot.src = "robot_wiki.png";
-  window.requestAnimationFrame(draw);
-}
-
-function draw() {
-  const ctx = document.getElementById("canvas").getContext("2d");
-
-  ctx.globalCompositeOperation = "destination-over";
-  ctx.clearRect(0, 0, 500, 200); // clear canvas
-  ctx.save();
-
-  /*ctx.fillStyle = "rgb(0 0 0 / 40%)";
-  ctx.strokeStyle = "rgb(0 153 255 / 40%)";
-  ctx.save();
-  ctx.translate(150, 150);*/
-
-  // Earth
-  /*const time = new Date();
-  ctx.rotate(
-    ((2 * Math.PI) / 60) * time.getSeconds() +
-      ((2 * Math.PI) / 60000) * time.getMilliseconds(),
-  );*/
-  //ctx.translate(-100, 100);
-  ctx.drawImage(holobot, 0, 0, 200, 200);
-
-  ctx.restore();
-
-  /*ctx.beginPath();
-  ctx.arc(150, 150, 105, 0, Math.PI * 2, false); // Earth orbit
-  ctx.stroke();*/
-
-  window.requestAnimationFrame(draw);
-}
-//init()
-
 const socket = new WebSocket("wss://holomatik-ai.onrender.com");
 // Connection opened
 socket.addEventListener("open", (event) => {
@@ -602,6 +564,8 @@ function rateHR() {
 	const rating = document.getElementById("rating").value
 	msg['rating'] = rating
 	const js = JSON.stringify(msg)
+	alert("Thank you. Your rating has been submitted.")
+	rating.value = 0
 	socket.send(js)
 }
 </script>
